# dockerTesting

./: CMakeLists.txt  usefullCommands.txt
01_CppRestSdk/: CMakeLists.txt
01_CppRestSdk/src/: main.cpp  stdafx.h
01_CppRestSdk/src/cpprest/: handler.cpp
01_Pistache/: CMakeLists.txt
01_Pistache/src/: Animal.hpp  main.cpp
02_simpleDockerfile/: Dockerfile  main
02_simpleDockerfile/src/: main.cpp
03_CppRestSdkInDocker/: Dockerfile  docker-compose.yml
03_CppRestSdkInDocker/src/: CMakeLists.txt  FakeDb.cpp  FakeDb.hpp  Student.cpp  main.cpp
03_CppRestSdkInDocker/src/cpprest/: handler.cpp
03_PistacheInDocker/: Dockerfile  notes.txt
03_PistacheInDocker/src/: CMakeLists.txt  main.cpp
04_Http_Db/: Dockerfile
04_Http_Db/src/: CMakeLists.txt  FakeDb.cpp  FakeDb.hpp  main.cpp
04_Http_Db/src/cpprest/: handler.cpp  handler.h
05_OnlineTalksDemo/: CMakeLists.txt
05_OnlineTalksDemo/src/: FakeDb.cpp  FakeDb.hpp  Student.cpp  Student.hpp  main.cpp  stdafx.h
05_OnlineTalksDemo/src/cpprest/: handler.cpp  handler.h
05_OnlineTalksDemo/test/: thunder-collection_Testing collection.json
src/: Animal.cpp  main.cpp
